--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 
   <footer class="footer">
     <div class="container">
-      <h2 class="footer__title">Т.Войтова</h2>
+      <h2 class="footer__title">Таня<br>Войтова</h2>
 
       <div class="footer-wrapper">
         <!-- <div class="footer__item">
